Add Branded videos to Works page

--- a/works.html
+++ b/works.html
@@ -495,10 +495,351 @@
         <h3>Tracing Ben (part 2)</h3>
       </div>
       <!-- Branded -->
-      <div class="work-card" data-category="branded">
-        <img src="images/placeholder2.jpg" alt="Branded 1" />
-        <div class="card-caption">Brands Unbound</div>
-      </div>
+<!-- Embedded videos for branded projects. Each card is a video wrapper with title. -->
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/1100812383" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>adidas 2025 China High School Football League</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/1082143727" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>Towel Percussion</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/1082189854" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>It's Hot Pot Time!</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/924896083" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>adidas I Sport No Matter</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/925777733" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>BMW I Project Jupiter</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/1055510278" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>BMW I Project Jupiter Cannes Lions</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/924912911" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>adidas I Yoga Village</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/1055509252" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>adidas I Yoga Village Cannes Lions</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/1002264643" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>MINI 65th Birthday Surprise</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/828297408" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>BMW I Nothing But Sheer Joy</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/743698211" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>BMW I Nothing But Sheer Joy Cannes Lions</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/867121720" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>adidas Zero I Swift Criminal</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/493339487" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>UGG I Holiday</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://www.youtube.com/embed/gHr3eEWJnLk?start=2" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>Hard-Headed</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://www.youtube.com/embed/zfc8IBAwASs?start=1" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>Washed Out</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/790798287" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>BMW I Translating Joy</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/849054576" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>BMW I Translating Joy Cannes Lions</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/852242114" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>BMW I Bava ReCollection Vlog</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/821906287" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>BMW I Bava Vlog@Shanghai BMW Experience Center</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/821910007" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>BMW I M Love</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/718796835" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>adidas NEO I Neighbors</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/744248556" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>adidas Neo I The Neo Gymnastics Cannes Lions</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/767945750" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>BMW I XM Shanghai Launch Event Teaser</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/848967443" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>BMW I XM Beijing Event Teaser</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/344033908" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>Microsoft Windows I Long Battery</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/344035788" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>Microsoft Windows I 2 in 1</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/344038176" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>Microsoft Windows I Inking</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/397098914" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>Laughter Is Contagious</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/660599702" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>Gatorade I TikTok "Basketball"</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/660600687" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>Gatorade I TikTok "Football"</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/660600140" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>Gatorade I TikTok "Badminton"</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/390227294" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>JPretty I TikTok 1</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/390227327" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>JPretty I TikTok 2</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/390227361" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>JPretty I TikTok 3</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/493342107" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>NBA I Basketball Love</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/276462353" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>Bose I Brand TVC</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/270888148" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>Volvo I S90 TVC</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/288700077" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>Tuborg I Open For More</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/376612175" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>Microsoft Office 365 I KOL Video</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/311188725" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>Microsoft MPC I Birthday</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/311192528" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>Microsoft MPC I Surprise Gift</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/311169270" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>Kinder Seasonal I CNY</h3>
+        </div>
+        <div class="video-card" data-category="branded">
+            <div class="video-wrapper">
+                <iframe src="https://player.vimeo.com/video/176512484" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <h3>Inside Sanli Shang</h3>
+        </div>
     </div>
   </section>
 
