--- a/works/index.html
+++ b/works/index.html
@@ -44,7 +44,8 @@
   <!-- Navigation -->
   <nav class="nav">
     <a href="/">Home</a>
-    <a href="/works.html" class="active">Works</a>
+    <!-- Link to the works index path rather than works.html for cleaner URL -->
+    <a href="/works" class="active">Works</a>
     <a href="/recognitions.html">Recognitions</a>
     <a href="/writings.html">Writings</a>
     <a href="/about.html">About</a>
@@ -55,12 +56,12 @@
     <h1>Works</h1>
     <!-- Category Tabs -->
     <div class="tabs">
-      <button class="tab active" data-category="all">All</button>
-      <button class="tab" data-category="ai-films">AI Films</button>
+      <!-- Default active tab is AI Films; removed the 'All' tab -->
+      <button class="tab active" data-category="ai-films">AI Films</button>
       <button class="tab" data-category="live-action">Live Action</button>
       <button class="tab" data-category="animation">Animation</button>
       <button class="tab" data-category="documentary">Documentary</button>
-      <button class="tab" data-category="branded">Branded</button>
+      <button class="tab" data-category="branded">Branded Content</button>
     </div>
     <!-- Works Grid -->
     <div class="works-grid">
