Update works page: remove All tab and rename Branded to Branded Content

--- a/works.html
+++ b/works.html
@@ -55,12 +55,12 @@
     <h1>Works</h1>
     <!-- Category Tabs -->
     <div class="tabs">
-      <button class="tab active" data-category="all">All</button>
-      <button class="tab" data-category="ai-films">AI Films</button>
+      <!-- Default active tab is AI Films; removed the 'All' tab -->
+      <button class="tab active" data-category="ai-films">AI Films</button>
       <button class="tab" data-category="live-action">Live Action</button>
       <button class="tab" data-category="animation">Animation</button>
       <button class="tab" data-category="documentary">Documentary</button>
-      <button class="tab" data-category="branded">Branded</button>
+      <button class="tab" data-category="branded">Branded Content</button>
     </div>
     <!-- Works Grid -->
     <div class="works-grid">
