Update Recognitions page: add awards and media coverage sections

--- a/recognitions.html
+++ b/recognitions.html
@@ -10,39 +10,133 @@
 </head>
 <body>
   <nav class="nav">
-    <a href="index.html">Home</a>
-    <a href="works.html">Works</a>
-    <a href="recognitions.html" class="active">Recognitions</a>
-    <a href="writings.html">Writings</a>
-    <a href="about.html">About</a>
+    <!-- Use root‑relative links so navigation works from any page -->
+    <a href="/">Home</a>
+    <a href="/works">Works</a>
+    <a href="/recognitions.html" class="active">Recognitions</a>
+    <a href="/writings.html">Writings</a>
+    <a href="/about.html">About</a>
   </nav>
 
   <section class="recognitions-page">
     <h1>Recognitions</h1>
     <p>
-      Our films have been honoured at international festivals and featured in leading media
-      publications. Here is a selection of awards and press highlights.
+      Our films have been honoured at international festivals and have been featured in leading media
+      publications. Below you can explore a selection of awards we’ve earned and a few of the
+      outlets that have covered our work.
     </p>
+    <!-- Awards section -->
+    <h2 class="section-heading">Awards</h2>
     <div class="awards-list">
       <div class="award">
-        <img src="images/placeholder1.jpg" alt="Award 1" />
-        <h3>Best Short Film</h3>
-        <p>Future Visions Festival, 2024</p>
+        <img src="images/Cannian_Lions.png" alt="Cannes Lions Gold" />
+        <h3>Cannes Lions Gold</h3>
+        <p>× 1</p>
       </div>
       <div class="award">
-        <img src="images/placeholder2.jpg" alt="Award 2" />
-        <h3>Audience Choice</h3>
-        <p>New Narratives Showcase, 2023</p>
+        <img src="images/bronze-lion.png" alt="Cannes Lions Bronze" />
+        <h3>Cannes Lions Bronze</h3>
+        <p>× 1</p>
       </div>
       <div class="award">
-        <img src="images/placeholder3.jpg" alt="Award 3" />
-        <h3>Official Selection</h3>
-        <p>Visionary Arts Week, 2024</p>
+        <img src="images/os-best-of-discipline-pencil-rank.png" alt="The One Show – Best of Discipline" />
+        <h3>The One Show – Best of Discipline</h3>
+        <p>× 1</p>
       </div>
       <div class="award">
-        <img src="images/placeholder4.jpg" alt="Award 4" />
-        <h3>Press Feature</h3>
-        <p>Creatives Magazine, 2025</p>
+        <img src="images/os-gold-pencil-rank.png" alt="The One Show – Gold Pencil" />
+        <h3>The One Show – Gold Pencil</h3>
+        <p>× 1</p>
+      </div>
+      <div class="award">
+        <img src="images/os-bronze-pencil-rank.png" alt="The One Show – Bronze Pencil" />
+        <h3>The One Show – Bronze Pencil</h3>
+        <p>× 1</p>
+      </div>
+      <div class="award">
+        <img src="images/12227641_10153674116675185_614845691565476466_n.jpg" alt="London International Awards Gold" />
+        <h3>London International Awards – Gold</h3>
+        <p>× 1</p>
+      </div>
+      <div class="award">
+        <img src="images/graphite.png" alt="D&amp;AD Graphite Pencil" />
+        <h3>D&amp;AD Graphite Pencil</h3>
+        <p>× 1</p>
+      </div>
+      <div class="award">
+        <img src="images/wood.png" alt="D&amp;AD Wood Pencil" />
+        <h3>D&amp;AD Wood Pencil</h3>
+        <p>× 1</p>
+      </div>
+      <div class="award">
+        <img src="images/spikes.png" alt="Spikes Asia – Grand Prix" />
+        <h3>Spikes Asia – Grand Prix</h3>
+        <p>× 1</p>
+      </div>
+      <div class="award">
+        <img src="images/spikes.png" alt="Spikes Asia – Gold" />
+        <h3>Spikes Asia – Gold</h3>
+        <p>× 1</p>
+      </div>
+      <div class="award">
+        <img src="images/spikes.png" alt="Spikes Asia – Bronze" />
+        <h3>Spikes Asia – Bronze</h3>
+        <p>× 3</p>
+      </div>
+      <div class="award">
+        <img src="images/spikes.png" alt="Spikes Asia – Agency of the Year by Market" />
+        <h3>Spikes Asia – Agency of the Year by Market</h3>
+        <p>× 1</p>
+      </div>
+      <div class="award">
+        <img src="images/Clio+-+Bronze.png" alt="Clio Awards – Bronze" />
+        <h3>Clio Awards – Bronze</h3>
+        <p>× 1</p>
+      </div>
+      <div class="award">
+        <img src="images/GRANDE.jpg" alt="ADFEST – Grande" />
+        <h3>ADFEST – Grande</h3>
+        <p>× 1</p>
+      </div>
+    </div>
+
+    <!-- Media coverage section -->
+    <h2 class="section-heading">Media Coverage</h2>
+    <div class="awards-list">
+      <div class="award">
+        <img src="images/Jupiter_Ads of the World.png" alt="Ads of the World" />
+        <h3>Ads of the World</h3>
+        <p>Feature</p>
+      </div>
+      <div class="award">
+        <img src="images/Jupiter_Campaign.png" alt="Campaign" />
+        <h3>Campaign</h3>
+        <p>Feature</p>
+      </div>
+      <div class="award">
+        <img src="images/Qiaobei_LBB.png" alt="Little Black Book" />
+        <h3>Little Black Book</h3>
+        <p>Feature</p>
+      </div>
+      <div class="award">
+        <img src="images/Qiaobei_Marketech.png" alt="Marketech" />
+        <h3>Marketech APAC</h3>
+        <p>Feature</p>
+      </div>
+      <div class="award">
+        <img src="images/Translate_adweek.png" alt="Adweek" />
+        <h3>Adweek</h3>
+        <p>Coverage</p>
+      </div>
+      <div class="award">
+        <img src="images/Translate_brands.png" alt="The Brand Planet" />
+        <h3>Brand Insights</h3>
+        <p>Coverage</p>
+      </div>
+      <div class="award">
+        <img src="images/Translate_motion.png" alt="Motionographer" />
+        <h3>Motionographer</h3>
+        <p>Coverage</p>
       </div>
     </div>
   </section>
