Update recognitions page: remove introduction and apply media-list class for larger logos and spacing

--- a/recognitions.html
+++ b/recognitions.html
@@ -19,12 +19,6 @@
   </nav>
 
   <section class="recognitions-page">
-    <h1>Recognitions</h1>
-    <p>
-      Our films have been honoured at international festivals and have been featured in leading media
-      publications. Below you can explore a selection of awards we’ve earned and a few of the
-      outlets that have covered our work.
-    </p>
     <!-- Awards section -->
     <h2 class="section-heading">Awards</h2>
     <div class="awards-list">
@@ -102,7 +96,7 @@
 
     <!-- Media coverage section -->
     <h2 class="section-heading">Media Coverage</h2>
-    <div class="awards-list">
+    <div class="awards-list media-list">
       <!-- Each media item includes an image, a linked headline, and the publication name -->
       <div class="award">
         <img src="images/Yoga Village_LIA.png" alt="London International Awards" />
